Add date and Disable webpage view

--- a/.github/workflows/build_kernel.yml
+++ b/.github/workflows/build_kernel.yml
@@ -46,6 +46,9 @@ jobs:
     runs-on: ubuntu-latest
     environment: secureEnvironment
     steps:
+    - name: Get date
+      id: rundate
+      run: sudo rm /etc/localtime && sudo ln -s /usr/share/zoneinfo/Asia/Jakarta /etc/localtime && echo "REPO_DATE=`date`" >> $GITHUB_OUTPUT
     - uses: actions/checkout@v4
       with:
         path: kernel_root
@@ -60,13 +63,15 @@ jobs:
       with:
         to: ${{ secrets.CHAT_ID }}
         token: ${{ secrets.BOT_TOKEN }}
+        disable-web-page-preview: true
         message: |
-          ${{ github.actor }} triggered a kernel build!
-          
+          @${{ github.actor }} triggered a kernel build!
+
+          Start: ${{ steps.rundate.outputs.REPO_DATE }}
           Device: ${{ github.event.inputs.TARGET_DEVICE }}
           Branch: ${{ github.event.inputs.BRANCH }}
           Workflows: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-          Repository: ${{ github.repository }}
+          Repository: ${{ github.server_url }}/${{ github.repository }}
 
     - name: Prepare dependencies
       run: |
@@ -83,10 +88,6 @@ jobs:
         tar -xf clang.tar.gz && rm clang.tar.gz && cd ..
         git clone --depth=1 https://github.com/rsuntk/toolchains.git -b gcc-10 gcc-10
       working-directory: kernel_root
-    - name: Prepare timezone fix
-      run: |
-        sudo rm /etc/localtime
-        sudo ln -s /usr/share/zoneinfo/Asia/Jakarta /etc/localtime
       
     - name: Build kernel
       id: buildKernel
